<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">手机账户管理系统</string>
    <string name="account">注册账号:</string>
    <string name="login_permission">登陆权限:</string>
     <string name="login_password">登陆密码:</string>
     <string name="btn_login">登   陆</string>
     <string name="selhelp_register">管理员注册----------------------------></string>
     <string name="concact_us">联系我们-------------------------------></string>
     <string name="return_button">返回</string>
     <string name="next_button">下一步</string>
     <string name="selfreg_title">自助注册</string>
     <string name="tip_text">欢迎使用手机管理系统，请您按照规范自行注册!</string> 
     <string name="confirm">确定</string>
     <string name="pleaseinputzhanghao">请输入账号</string>
     <string name="pleaseinputpassword">请输入密码</string>
     <string name="pleaseconfirminformation">请确认注册信息</string>
     <string name="financehelper">金融助手</string>
     <string name="userfunctuon">用户功能</string> 
     <string name="userquery">用户查询</string>
     <string name="usermodifypwd">修改密码</string>
     <string name="usertransferaccounts">用户转账</string>
     <string name="currency">币种:</string>
     <string name="deadline">期限种类：</string>
     
     <string-array name="currency">
       <item >美元</item>  
       <item >人民币</item>  
         
     </string-array>
</resources>