<?xml version="1.0" encoding="utf-8"?>

  
    <LinearLayout 
    android:orientation="vertical" 
    android:id="@+id/layout" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/webbg"
    >
    <RelativeLayout 
        android:id="@+id/gTopliner" 
        android:layout_width="fill_parent" 
        android:layout_height="50dip"
        android:background="@drawable/topbg"
        >
    <Button
        android:layout_width="64dip"
        android:layout_height="30dip"
        android:id="@+id/btn_back" 
        android:layout_marginLeft="2dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/returnbutton1_style"
        android:text="@string/financehelper"
        android:textSize="10sp"
        />
    <TextView 
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="45dip"
        android:layout_marginTop="10dip"
        android:layout_toRightOf="@id/btn_back"
        android:layout_marginLeft="65dip"
        android:text="@string/userfunctuon"
        android:textSize="20sp"
        
        />
     <Button
        android:layout_width="64dip"
        android:layout_height="30dip"
        android:id="@+id/btn_next" 
        android:layout_toRightOf="@id/tv_title"
        android:layout_marginLeft="40dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/nextbutton_style"
        android:text="@string/next_button"
        android:textSize="10sp"
        />
    </RelativeLayout>
     <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/dock2"    
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="15dip"    
        >
        <RelativeLayout 
        android:layout_gravity="center_vertical"
        android:paddingLeft="12dip"
        android:paddingRight="10dip"
        android:layout_width="fill_parent"
        android:layout_height="42dip"    
        >
         <TextView 
         android:text="对方账号:" 
         android:layout_centerVertical="true" 
         style="@style/EditBoxTextStyle" />
          <EditText 
         android:id="@+id/account" 
         android:layout_width="155.0dip" 
         android:hint="请输入对方账号:" 
         android:maxLength="19" 
         android:layout_alignParentRight="true" 
         android:layout_centerVertical="true" 
         style="@style/EditBoxStyle" />
        </RelativeLayout>    
        <ImageView 
         android:layout_width="fill_parent"
         android:layout_height="1dip"
         android:src="#ffcccc"   
            />     
         <RelativeLayout 
        
         android:paddingLeft="12.0dip" 
         android:paddingRight="10.0dip" 
         android:layout_width="fill_parent" 
         android:layout_height="42.0dip">
         <TextView 
         android:text="核对账号:" 
         android:layout_centerVertical="true" 
         style="@style/EditBoxTextStyle" />
          <EditText 
         android:id="@+id/second_account" 
         android:layout_width="155.0dip" 
         android:hint="请再输一遍账号:" 
         android:maxLength="19" 
         android:layout_alignParentRight="true" 
         android:layout_centerVertical="true" 
         style="@style/EditBoxStyle" />
        </RelativeLayout>    
               </LinearLayout>
</LinearLayout>