<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/ScrollView01" 
    android:scrollbars="none" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/webbg">
    <LinearLayout 
    android:orientation="vertical" 
    android:id="@+id/layout" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    >
    <RelativeLayout 
        android:id="@+id/gTopliner" 
        android:layout_width="fill_parent" 
        android:layout_height="50dip"
        android:background="@drawable/topbg"
        >
    <Button
        android:layout_width="64dip"
        android:layout_height="30dip"
        android:id="@+id/btn_back" 
        android:layout_marginLeft="2dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/returnbutton1_style"
        android:text="@string/financehelper"
        android:textSize="10sp"
        />
    <TextView 
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="45dip"
        android:layout_marginTop="10dip"
        android:layout_toRightOf="@id/btn_back"
        android:layout_marginLeft="65dip"
        android:text="@string/userfunctuon"
        android:textSize="20sp"
        
        />
    
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="20dip"
        android:layout_marginLeft="10dip" 
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
      >
    
    <LinearLayout 
        android:layout_marginTop="20dip"
        android:layout_width="300dip"
        android:layout_height="45dip"
        android:orientation="horizontal"
        >
     <TextView 
        android:layout_marginTop="5dip"
        android:layout_height="wrap_content"
        android:layout_width="140dip"
        android:text="@string/currency"
        android:textSize="15sp"
        android:gravity="center"
         />   
      <Spinner 
        android:id="@+id/spinner_1"  
        android:layout_width="150dip" 
        android:layout_height="40dip"
        android:layout_marginTop="5dip"
       
          /> 
          
     </LinearLayout>
      <ImageView
       android:layout_marginLeft="10dip" 
       android:layout_width="280dip"
       android:layout_height="1dip"
       android:src="#454545" 
        
        />
      
       <LinearLayout 
        android:layout_width="300dip"
        android:layout_height="45dip"
       
        android:orientation="horizontal"
        >
     <TextView 
        android:layout_marginTop="5dip"
        android:layout_height="wrap_content"
        android:layout_width="140dip"
        android:text="@string/deadline"
        android:textSize="15sp"
        android:gravity="center"
         />   
      <Spinner 
        android:id="@+id/spinner_2"  
        android:layout_width="150dip" 
        android:layout_height="40dip"
        android:layout_marginTop="5dip"
       
          /> 
          
     </LinearLayout>
     <ImageView
       android:layout_marginLeft="10dip" 
       android:layout_width="280dip"
       android:layout_height="1dip"
       android:src="#454545" 
        
        />
       <LinearLayout 
        android:layout_width="300dip"
        android:layout_height="45dip"
       
        android:orientation="horizontal"
        >
     <TextView 
        android:layout_marginTop="5dip"
        android:layout_height="wrap_content"
        android:layout_width="140dip"
        android:text="存款金额:"
        android:textSize="15sp"
        android:gravity="center"
         />   
      <EditText 
        android:id="@+id/spinner_2"  
        android:layout_width="130dip" 
        android:layout_height="40dip"
        android:layout_marginTop="5dip"
       
          />
       <TextView 
        android:layout_marginTop="5dip"
        android:layout_height="wrap_content"
        android:layout_width="20dip"
        android:text="元"
        android:textSize="15sp"
        android:gravity="center"
         />  
    </LinearLayout>
   
    <ImageView
       android:layout_marginLeft="10dip" 
       android:layout_width="280dip"
       android:layout_height="1dip"
       android:src="#454545" 
        
        />
     <LinearLayout 
        android:layout_width="300dip"
        android:layout_height="45dip"
       
        android:orientation="horizontal"
        >
     <TextView 
        android:layout_marginTop="5dip"
        android:layout_height="wrap_content"
        android:layout_width="140dip"
        android:text="年利润:"
        android:textSize="15sp"
        android:gravity="center"
         />   
      <EditText 
        android:id="@+id/spinner_2"  
        android:layout_width="130dip" 
        android:layout_height="40dip"
        android:layout_marginTop="5dip"
       
          />
       <TextView 
        android:layout_marginTop="5dip"
        android:layout_height="wrap_content"
        android:layout_width="20dip"
        android:text="(%)"
        android:textSize="15sp"
        android:gravity="center"
         />  
    </LinearLayout>
         <ImageView
       android:layout_marginLeft="10dip" 
       android:layout_width="280dip"
       android:layout_height="1dip"
       android:src="#454545" 
        
        />
        <LinearLayout 
        android:layout_width="300dip"
        android:layout_height="45dip"
       
        android:orientation="horizontal"
        >
     <TextView 
        android:layout_marginTop="5dip"
        android:layout_height="wrap_content"
        android:layout_width="140dip"
        android:text="存期:"
        android:textSize="15sp"
        android:gravity="center"
         />   
      <EditText 
        android:id="@+id/spinner_2"  
        android:layout_width="130dip" 
        android:layout_height="40dip"
        android:layout_marginTop="5dip"
       
          />
       <TextView 
        android:layout_marginTop="5dip"
        android:layout_height="wrap_content"
        android:layout_width="20dip"
        android:text="月"
        android:textSize="15sp"
        android:gravity="center"
         />  
    </LinearLayout>
          <ImageView
       android:layout_marginLeft="10dip" 
       android:layout_width="280dip"
       android:layout_height="1dip"
       android:src="#454545" 
        
        />
           <LinearLayout 
        android:layout_width="300dip"
        android:layout_height="45dip"
       
        android:orientation="horizontal"
        >
     <TextView 
        android:layout_marginTop="5dip"
        android:layout_height="wrap_content"
        android:layout_width="140dip"
        android:text="利息:"
        android:textSize="15sp"
        android:gravity="center"
         />   
      <TextView 
        android:id="@+id/spinner_2"  
        android:layout_width="130dip" 
        android:layout_height="40dip"
        android:layout_marginTop="5dip"
       
          />
       <TextView 
        android:layout_marginTop="5dip"
        android:layout_height="wrap_content"
        android:layout_width="20dip"
        android:text="元"
        android:textSize="15sp"
        android:gravity="center"
         />  
    </LinearLayout>
           <ImageView
       android:layout_marginLeft="10dip" 
       android:layout_width="280dip"
       android:layout_height="1dip"
       android:src="#454545" 
        
        />
       <LinearLayout 
        android:layout_width="300dip"
        android:layout_height="45dip"
       
        android:orientation="horizontal"
        >
     <TextView 
        android:layout_marginTop="5dip"
        android:layout_height="wrap_content"
        android:layout_width="140dip"
        android:text="扣除利息税:"
        android:textSize="15sp"
        android:gravity="center"
         />   
      <TextView 
        android:id="@+id/spinner_2"  
        android:layout_width="130dip" 
        android:layout_height="40dip"
        android:layout_marginTop="5dip"
       
          />
       <TextView 
        android:layout_marginTop="5dip"
        android:layout_height="wrap_content"
        android:layout_width="20dip"
        android:text="元"
        android:textSize="15sp"
        android:gravity="center"
         />  
    </LinearLayout>
         <ImageView
       android:layout_marginLeft="10dip" 
       android:layout_width="280dip"
       android:layout_height="1dip"
       android:src="#454545" 
        
        /> 
           <LinearLayout 
        android:layout_width="300dip"
        android:layout_height="45dip"
       
        android:orientation="horizontal"
        >
     <TextView 
        android:layout_marginTop="5dip"
        android:layout_height="wrap_content"
        android:layout_width="140dip"
        android:text="本息合计（税后）:"
        android:textSize="15sp"
        android:gravity="center"
         />   
      <TextView 
        android:id="@+id/spinner_2"  
        android:layout_width="130dip" 
        android:layout_height="40dip"
        android:layout_marginTop="5dip"
       
          />
       <TextView 
        android:layout_marginTop="5dip"
        android:layout_height="wrap_content"
        android:layout_width="20dip"
        android:text="元"
        android:textSize="15sp"
        android:gravity="center"
         />      
    </LinearLayout>
    
        
    </LinearLayout>
         <LinearLayout
        android:layout_marginTop="10dip" 
        android:layout_width="300dip"
        android:layout_height="45dip"
        
        >   
          <Button 
       android:layout_width="100dip"
       android:layout_height="fill_parent"
       android:gravity="center"
       android:text="计    算"
       android:layout_marginLeft="100dip"
              /> 
        </LinearLayout>       
    
    
    </LinearLayout>
</ScrollView>
